# whir

./: .gitignore  Cargo.toml  batch_effectiveness.md  batch_effectiveness.py  batch_effectiveness_packing.py  batch_packing.md
src/: errors.rs  fs_utils.rs  lib.rs  parameters.rs  rust-toolchain.toml  utils.rs
src/ceno_binding/: merkle_config.rs  mod.rs  pcs.rs  pow.rs
src/crypto/: fields.rs
src/crypto/merkle_tree/: blake3.rs  keccak.rs  mod.rs
src/ntt/: matrix.rs  mod.rs  ntt_impl.rs  transpose.rs  utils.rs
src/poly_utils/: coeffs.rs  evals.rs  fold.rs  gray_lag_poly.rs  mod.rs  sequential_lag_poly.rs  streaming_evaluation_helper.rs
src/sumcheck/: mod.rs  proof.rs  prover_batched.rs  prover_core.rs  prover_not_skipping.rs  prover_not_skipping_batched.rs  prover_single.rs
src/whir/: committer.rs  iopattern.rs  mod.rs  parameters.rs  pcs.rs  prover.rs  verifier.rs  vm_binding.rs
src/whir/batch/: committer.rs  iopattern.rs  mod.rs  prover.rs  utils.rs  verifier.rs
