[package]
categories = ["cryptography", "zk", "blockchain", "pcs"]
description = "Multilinear Polynomial Commitment Scheme"
edition = "2021"
keywords = ["cryptography", "zk", "blockchain", "pcs"]
license = "MIT OR Apache-2.0"
name = "whir"
readme = "README.md"
repository = "https://github.com/WizardOfMenlo/whir/"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "main"

[dependencies]
ark-crypto-primitives = { version = "0.5", features = ["merkle_tree"] }
ark-ff = { version = "0.5", features = ["asm", "std"] }
ark-poly = "0.5"
ark-serialize = "0.5"
ark-std = { version = "0.5", features = ["std"] }
ark-test-curves = { version = "0.5", features = ["bls12_381_curve"] }
blake2 = "0.10"
blake3 = "1.5.0"
clap = { version = "4.4.17", features = ["derive"] }
derivative = { version = "2", features = ["use_core"] }
lazy_static = "1.4"
nimue = { git = "https://github.com/arkworks-rs/nimue", features = ["ark"] }
nimue-pow = { git = "https://github.com/arkworks-rs/nimue" }
rand = "0.8"
rand_chacha = "0.3"
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
transpose = "0.2.3"

derive_more = { version = "1.0.0", features = ["debug"] }
goldilocks = { git = "https://github.com/scroll-tech/ceno-Goldilocks" }
itertools = "0.14.0"
thiserror = "1"

[profile.release]
debug = true

[features]
asm = []
ceno = []
default = ["parallel", "ceno"]
parallel = [
  "dep:rayon",
  "ark-poly/parallel",
  "ark-ff/parallel",
  "ark-crypto-primitives/parallel",
]
print-trace = ["ark-std/print-trace"]
rayon = ["dep:rayon"]
